# lightsequence

./: .coverage  AGENTS.md  MIDI_ACTIONS_IMPLEMENTATION.md  PILOT_SETTINGS_IMPLEMENTATION.md  README.md  button_matrix.py  config.json  config.yaml  demo.py  launchpad_controller.py  main.py  pilots.json  presets.json  pyproject.toml  pytest.ini  rgb_animation_engine.py  run.bat  run.py  run_editor.bat  sequences.json  sequences.tmp  test.py  test_animations.py  test_mapping.py  test_minimal.py  test_preset_functionality.py  test_preset_logic.py  test_preset_recording.py
controller/common/: config.py
controller/controller/: background_animator.py  main.py  preset_manager.py
controller/devices/: launchpad.py
controller/gui/: gui.py
controller/midi/: light_software.py
controller/pilot/: capture_training.py
lumiblox/common/: config.py  constants.py  device_state.py  enums.py  project_data_repository.py
lumiblox/controller/: AGENTS.md  app_state_manager.py  background_animator.py  command_queue.py  device_monitor.py  input_handler.py  led_controller.py  light_controller.py  main.py  preset_manager.py  scene_controller.py  sequence.py  sequence_controller.py
lumiblox/devices/: launchpad.py
lumiblox/gui/: AGENTS.md  controller_thread.py  device_status.py  gui.py  gui_old.py  main_window.py  pilot_settings.py  pilot_widget.py  playback_controls.py  rule_editor.py  screen_utils.py  sequence_editor.py  ui_constants.py  widgets.py
lumiblox/midi/: __init__.py  light_software.py  light_software_protocol.py  light_software_sim.py  midi_manager.py
lumiblox/pilot/: __init__.py  clock_sync.py  sync.py  (+5 more)
pilot-tests/: capture.py  capture_training.py  data_preprocessing.ipynb  sync.py
src/: __init__.py  run.bat  run_editor.bat
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_imports.py
(+42 files in other folders)
