[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightcontroller"
version = "1.0.0"
description = "Professional party lighting controller for Novation Launchpad MK2"
readme = "README.md"
authors = [{name = "Party Lights"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.3",
    "pygame>=2.6.1",
    "pyside6>=6.9.3",
    "launchpad-py>=0.9.1",
]

[project.scripts]
lightcontroller = "lightcontroller.main:main"

[project.gui-scripts] 
lightcontroller-gui = "lightcontroller.gui:main"
