
[project]
name = "lightsequence"
version = "1.0.0"
description = "Professional party lighting controller for Novation Launchpad MK2"
readme = "README.md"
authors = [{name = "Party Lights"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.3",
    "pygame>=2.6.1",
    "pyside6>=6.9.3",
    "launchpad-py>=0.9.1",
    "numpy>=2.0.2",
]

[project.scripts]
lightsequence = "src.controller.main:main"

[project.gui-scripts] 
lightsequence-gui = "src.gui.main:main"
