
[project]
name = "lumiblox"
version = "0.1.0"
description = "Professional party lighting controller for Novation Launchpad MK2"
readme = "README.md"
authors = [{name = "Party Lights"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.3",
    "pygame>=2.6.1",
    "pyside6>=6.9.3",
    "launchpad-py>=0.9.1",
    "numpy>=2.0.2",
    "typing-extensions>=4.15.0",
    "isort>=6.1.0",
    "mss>=10.1.0",
]

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
lumiblox-cli = "lumiblox.controller.main:main"
lumiblox = "lumiblox.gui.gui:main"

